--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,10 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Main2Activity">
-
-
-
-
-
-
+<TextView
+    android:text="dadadada"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 </LinearLayout>
